[tool.poetry]
name = "personal-blog"
version = "0.1.0"
description = "Following https://flask.palletsprojects.com/en/2.2.x/tutorial/"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
